# CBL-Multi-disciplinary

./: .gitignore  README.md  pyproject.toml
Data_Set/Dataset 1 – Mobility Demand (Origin–Destination)/: eindhoven_od_matrix.csv
Data_Set/Dataset 2 – Shared Mobility Hubs/Car sharing locations/: Deelmobiliteit.prj  Deelmobiliteit.shp  Deelmobiliteit.shp.fld  Deelmobiliteit.shx
Data_Set/Dataset 2 – Shared Mobility Hubs/Locaties Deelmobiliteit Hubs (punt)/: locaties-deelmobiliteit-hubs-punt.csv  locaties-deelmobiliteit-hubs-punt.fgb  locaties-deelmobiliteit-hubs-punt.geojson  (+4 more)
Data_Set/Dataset 3 – Existing EV Charging Points/: oplaadpalen.csv  oplaadpalen.fgb  oplaadpalen.geojson  oplaadpalen.gpx  oplaadpalen.json  oplaadpalen.kml  oplaadpalen.parquet  oplaadpalen.xlsx
Data_Set/Dataset 6 – Electricity Load (Demand)/: GUI_TOTAL_LOAD_DAYAHEAD_202412312300-202501072300.xlsx  GUI_TOTAL_LOAD_YEARAHEAD_202412312300-202512312300.xlsx  eindhoven_districts.csv  eindhoven_zonal_load.csv  eindhoven_zonal_load.parquet
Jessie python files/: chargers_demand.py  dataset4_extract.py  extract_data.py  poles_analysis.py  remaining_grid_capacity.py  simulation.py  visualize_gpx.py  zonal_load_analysis.py
Task 1/: calculate accessibility indicators by walking traces.py  calculate grid feasibility capacity ratio.py
other data/: Inwoners - 2025 - Buurten.csv  buurten.geojson  charging_points_strijp_s.csv  ehv_congestion.csv  freepacement_lessdata_strijp_lili.csv  gpx_heatmap_density.npz  simulation_events.csv  walking_traces.geojson  zone_remaining_capacity_estimates_assume_class0.csv
