[project]
name = "cbl-multi-disciplinary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "contextily>=1.7.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyproj>=3.7.2",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "simpy>=4.1.2",
]
